objects/Competitive_Products_At_Dealership__c.object
<CustomObject>
    <description>The custom object/related list is needed to allow a user the ability to enter key information about a product that an account is using from a competitor.</description>
    <fields>
        <fullName>ADP_Product_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select an ADP like solution that matches the client’s product.</inlineHelpText>
        <label>ADP Product Name</label>
        <referenceTo>ADP_Product_Solution__c</referenceTo>
        <relationshipLabel>Competitive Products At Dealership</relationshipLabel>
        <relationshipName>Competitive_Products_At_Dealership</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitive Products At Dealership</relationshipLabel>
        <relationshipName>Competitive_Products_At_Dealership</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competitive_Vendor_Name__c</fullName>
        <formula>IF(Competitive_Vendor__r.Competitive_Vendor_Name__c =  &apos;Other&apos;, Competitive_Vendor__r.Competitive_Vendor_Name__c + &apos; - &apos; +  Non_Listed_Vendor__c, Competitive_Vendor__r.Competitive_Vendor_Name__c)</formula>
        <label>Competitive Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Competitive Vendor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Competitive_Vendor__c.ADP_Product_Solution__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.ADP_Product_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Competitive_Vendor__c</referenceTo>
        <relationshipLabel>Competitive Products At Dealership</relationshipLabel>
        <relationshipName>Competitive_Products_At_Dealership</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Monthly_Transactions__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter as whole dollars.</inlineHelpText>
        <label>Monthly Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_of_Term_Date__c</fullName>
        <label>End of Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Months_to_End_of_Term__c</fullName>
        <formula>(Year( End_of_Term_Date__c) * 12 + Month(End_of_Term_Date__c)) - (Year(TODAY()) * 12 + Month( TODAY()))</formula>
        <label>Months to End of Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Listed_Vendor__c</fullName>
        <inlineHelpText>Only fill in if &apos;Other&apos; is chosen for Competitive Vendor.</inlineHelpText>
        <label>Non-Listed Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Num_Users_Num_Handsets__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the # of users using the application or the # of handsets for telephony products.</inlineHelpText>
        <label># Users (or) # Handsets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Monthlies__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter as whole dollars.</inlineHelpText>
        <label>Recurring Monthlies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Competitive Products At Dealership</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ADP_Product_Name__c</columns>
        <columns>Competitive_Vendor__c</columns>
        <columns>Install_Date__c</columns>
        <columns>End_of_Term_Date__c</columns>
        <columns>Current_Monthly_Transactions__c</columns>
        <columns>Recurring_Monthlies__c</columns>
        <columns>Months_to_End_of_Term__c</columns>
        <columns>Non_Listed_Vendor__c</columns>
        <columns>Num_Users_Num_Handsets__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CPD-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Products At Dealership</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Non_Listed_Vendor_Cannot_be_Null</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Case(  Competitive_Vendor__r.Competitive_Vendor_Name__c  , &quot;Other&quot;, &quot;Other&quot;, &quot;&quot;) = &quot;Other&quot; &amp;&amp; ISBLANK(Non_Listed_Vendor__c), Case( Competitive_Vendor__r.Competitive_Vendor_Name__c , &quot;Other&quot;, &quot;Other&quot;, &quot;&quot;) &lt;&gt; &quot;Other&quot; &amp;&amp; NOT(ISBLANK(Non_Listed_Vendor__c)))</errorConditionFormula>
        <errorMessage>The Non-Listed Vendor field cannot be blank if Competitive Vendor selection is &apos;Other&apos;. The Non-Listed Vendor field should be blank when &apos;Other&apos; is not selected.</errorMessage>
    </validationRules>
</CustomObject>